<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- الملف الشخصي -->
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_placeholder"
        android:title="@string/profile_title" />
    
    <!-- تواصل معنا -->
    <item
        android:id="@+id/nav_contact_us"
        android:icon="@drawable/ic_contact"
        android:title="@string/contact_us_title" />
    
    <!-- من نحن -->
    <item
        android:id="@+id/nav_about_us"
        android:icon="@drawable/ic_info"
        android:title="@string/about_us_title" />
    
    <!-- سياسة الخصوصية -->
    <item
        android:id="@+id/nav_privacy_policy"
        android:icon="@drawable/ic_privacy"
        android:title="@string/privacy_policy_title" />
    
    <!-- إعدادات التطبيق -->
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
    
    <!-- شروط الاستخدام -->
    <item
        android:id="@+id/nav_terms_of_service"
        android:icon="@drawable/ic_terms"
        android:title="@string/terms_of_service_title" />
    
    <!-- حول التطبيق -->
    <item
        android:id="@+id/nav_about_app"
        android:icon="@drawable/ic_about"
        android:title="@string/about_app_title" />
    
    <!-- الفعاليات -->
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_events"
        android:title="@string/nav_events" />
    
    <!-- الأخبار -->
    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/ic_news"
        android:title="@string/nav_news" />
        
</menu>
