<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ahmmedalmzini783.wcguide.ui.home.HomeFragmentWithTabs"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home_with_tabs" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.ahmmedalmzini783.wcguide.ui.events.EventsFragment"
        android:label="@string/nav_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_chatbot"
        android:name="com.ahmmedalmzini783.wcguide.ui.chatbot.ChatbotFragment"
        android:label="@string/nav_chatbot"
        tools:layout="@layout/fragment_chatbot" />

</navigation>